<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/navigation_shopping" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/navigation_favorite" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_contact"
        android:title="@string/navigation_contact" />

    <item
        android:id="@+id/navigation_user_profile"
        android:icon="@drawable/ic_contact"
        android:title="@string/navigation_user_profile" />
</menu>