<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nguyennhatminh614.lifewearfashionshopapp.View.home_activity_tab_screen.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_shopping"
        android:name="com.nguyennhatminh614.lifewearfashionshopapp.View.home_activity_tab_screen.ShoppingFragment"
        android:label="@string/navigation_shopping"
        tools:layout="@layout/fragment_shopping" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.nguyennhatminh614.lifewearfashionshopapp.View.home_activity_tab_screen.FavoriteFragment"
        android:label="@string/navigation_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.nguyennhatminh614.lifewearfashionshopapp.View.home_activity_tab_screen.ContactFragment"
        android:label="@string/navigation_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/navigation_user_profile"
        android:name="com.nguyennhatminh614.lifewearfashionshopapp.View.home_activity_tab_screen.UserProfileFragment"
        android:label="@string/navigation_user_profile"
        tools:layout="@layout/fragment_user_profile" />
</navigation>