<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Login2Activity"
    android:background="#E5E5E5">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/logo_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/my_logo_app"
            android:src="@drawable/logo_app" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmail"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:errorEnabled="true"
            app:helperText="Nhập email vào"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_white_corner_radius_5dp_stroke_black_2dp"
                android:hint="@string/email_input">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPassword"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:helperText="Nhập mật khẩu vào"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_white_corner_radius_5dp_stroke_black_2dp"
                android:hint="@string/txtPassword"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textAllCaps="false"

            android:text="Đăng Nhập Ngay !!"/>
    </LinearLayout>
</RelativeLayout>