<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.RegisterActivity"
    android:background="@color/backgroundColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Logo app       -->
        <ImageView
            android:id="@+id/logo_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/my_logo_app"
            android:src="@drawable/logo_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đăng ký tài khoản mới"
            android:padding="20dp"
            android:textSize="24sp"
            android:fontFamily="@font/inter_semi_bold"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">
            <!-- Input First Name   -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtFirstName"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_white_corner_radius_5dp_stroke_black_2dp"
                    android:fontFamily="@font/inter_regular"
                    android:hint="Họ"
                    android:inputType="textPersonName">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="10dp" />
            <!-- Input Last Name   -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtLastName"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_white_corner_radius_5dp_stroke_black_2dp"
                    android:fontFamily="@font/inter_regular"
                    android:hint="Tên"
                    android:inputType="textPersonName">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Input Email   -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtEmail"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_white_corner_radius_5dp_stroke_black_2dp"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/email_input"
                android:inputType="textEmailAddress">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Radio Group Gioi Tinh-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tGioiTinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Giới Tính:"
                android:fontFamily="@font/inter_semi_bold"
                android:textColor="@color/black"
                android:layout_centerVertical="true" />

            <RadioGroup
                android:id="@+id/rdGroupGioiTinh"
                android:layout_toRightOf="@id/tGioiTinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdNam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Nam"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:fontFamily="@font/inter_semi_bold"
                    android:textColor="@color/black" />
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="10dp"/>
                <RadioButton
                    android:id="@+id/rdNu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nữ"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/inter_semi_bold"
                    android:textColor="@color/black"/>
            </RadioGroup>
        </RelativeLayout>

        <!-- Input Password   -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPassword"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_white_corner_radius_5dp_stroke_black_2dp"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/txtPassword"
                android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- ReInput Password   -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtReInputPassword"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_white_corner_radius_5dp_stroke_black_2dp"
                android:fontFamily="@font/inter_regular"
                android:hint="Nhập lại mật khẩu"
                android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Input Date Of Birth   -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtDateOfBirth"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_white_corner_radius_5dp_stroke_black_2dp"
                android:fontFamily="@font/inter_regular"
                android:hint="Ngày Sinh"
                android:inputType="date">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Input Phone Number   -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPhoneNumber"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_white_corner_radius_5dp_stroke_black_2dp"
                android:fontFamily="@font/inter_regular"
                android:hint="Số Điện Thoại"
                android:inputType="date">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="9">

            <!-- Login Button       -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@drawable/bg_yellow_corner_10dp"
                android:fontFamily="@font/inter_semi_bold"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/btnRegister"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:enabled="false"
                android:alpha="0.85"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="10dp" />
            <!-- Login Button       -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/bg_white_corner_10d_stroke_yellow_2dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="Hủy"
                android:textAllCaps="false"
                android:textColor="@color/primaryColor" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>